@@ -875,7 +875,10 @@ mmonitoptlist : /* EMPTY */
                 ;
 
 mmonitopt       : TIMEOUT NUMBER SECOND {
-                        mmonitset.timeout = $<number>2 * 1000; // net timeout is in milliseconds internally
+                        if ($<number>2 <= 0)
+                                yyerror2("The timeout value must be > 0");
+                        else
+                                mmonitset.timeout = $<number>2 * 1000; // net timeout is in milliseconds internally
                   }
                 | ssl
                 | sslchecksum
@@ -2203,7 +2206,10 @@ icmpsize        : SIZE NUMBER {
                 ;
 
 icmptimeout     : TIMEOUT NUMBER SECOND {
-                        icmpset.timeout = $<number>2 * 1000; // timeout is in milliseconds internally
+                        if ($<number>2 <= 0)
+                                yyerror2("The timeout value must be > 0");
+                        else
+                                icmpset.timeout = $<number>2 * 1000; // timeout is in milliseconds internally
                     }
                   ;
 
@@ -2216,7 +2222,10 @@ stoptimeout     : /* EMPTY */ {
                         $<number>$ = Run.limits.stopTimeout;
                   }
                 | TIMEOUT NUMBER SECOND {
-                        $<number>$ = $2 * 1000; // milliseconds internally
+                        if ($<number>2 <= 0)
+                                yyerror2("The timeout value must be > 0");
+                        else
+                                $<number>$ = $2 * 1000; // milliseconds internally
                   }
                 ;
 
@@ -2224,7 +2233,10 @@ starttimeout    : /* EMPTY */ {
                         $<number>$ = Run.limits.startTimeout;
                   }
                 | TIMEOUT NUMBER SECOND {
-                        $<number>$ = $2 * 1000; // milliseconds internally
+                        if ($<number>2 <= 0)
+                                yyerror2("The timeout value must be > 0");
+                        else
+                                $<number>$ = $2 * 1000; // milliseconds internally
                   }
                 ;
 
@@ -2232,7 +2244,10 @@ restarttimeout  : /* EMPTY */ {
                         $<number>$ = Run.limits.restartTimeout;
                   }
                 | TIMEOUT NUMBER SECOND {
-                        $<number>$ = $2 * 1000; // milliseconds internally
+                        if ($<number>2 <= 0)
+                                yyerror2("The timeout value must be > 0");
+                        else
+                                $<number>$ = $2 * 1000; // milliseconds internally
                   }
                 ;
 
@@ -2240,7 +2255,10 @@ programtimeout  : /* EMPTY */ {
                         $<number>$ = Run.limits.programTimeout;
                   }
                 | TIMEOUT NUMBER SECOND {
-                        $<number>$ = $2 * 1000; // milliseconds internally
+                        if ($<number>2 <= 0)
+                                yyerror2("The timeout value must be > 0");
+                        else
+                                $<number>$ = $2 * 1000; // milliseconds internally
                   }
                 ;
 
@@ -2248,12 +2266,18 @@ nettimeout      : /* EMPTY */ {
                         $<number>$ = Run.limits.networkTimeout;
                   }
                 | TIMEOUT NUMBER SECOND {
-                        $<number>$ = $2 * 1000; // net timeout is in milliseconds internally
+                        if ($<number>2 <= 0)
+                                yyerror2("The timeout value must be > 0");
+                        else
+                                $<number>$ = $2 * 1000; // net timeout is in milliseconds internally
                   }
                 ;
 
 connectiontimeout : TIMEOUT NUMBER SECOND {
-                        portset.timeout = $<number>2 * 1000; // timeout is in milliseconds internally
+                        if ($<number>2 <= 0)
+                                yyerror2("The timeout value must be > 0");
+                        else
+                                portset.timeout = $<number>2 * 1000; // timeout is in milliseconds internally
                     }
                   ;
 
